# src/main/java/com/company/oa/dto/SysDeptDTO.java
@@ -1,0 +1,13 @@
+package com.company.oa.dto;
+
+import lombok.Data;
+import javax.validation.constraints.NotBlank;
+
+@Data
+public class SysDeptDTO {
+    @NotBlank
+    private String name;
+    private Long parentId;
+    private Integer orderNum;
+    private Integer status;
+}
